--- a/OWCE/OWCE/OWCE.csproj
+++ b/OWCE/OWCE/OWCE.csproj
@@ -62,6 +62,9 @@
     <Compile Update="Pages\SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Pages\DebugPreviousRecordingsPage.xaml.cs">
+      <DependentUpon>DebugPreviousRecordingsPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Remove="**/.DS_Store" />
